[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nanolandscape-saas"
version = "1.0.0"
authors = [
    {name = "NanoLandscape Development Team", email = "info@nanolandscape.ai"},
]
description = "Advanced Nanoparticle Superspace Framework SaaS Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "optuna>=2.10.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "click>=8.0.0",
    "joblib>=1.1.0",
    "pydantic>=1.8.0",
    "python-multipart>=0.0.5",
    "umap-learn>=0.5.0",
    "statsmodels>=0.13.0",
    "networkx>=2.6.0",
    "plotly>=5.0.0",
    "bokeh>=2.4.0",
    "requests>=2.25.0",
    "aiofiles>=0.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=0.19.0",
    "httpx>=0.20.0",
    "sqlalchemy>=1.4.0",
    "aiosqlite>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "tox>=3.24.0",
]
gpu = [
    "cupy>=9.0.0",
    "nvidia-ml-py3>=7.352.0",
]
full = [
    "cupy>=9.0.0",
    "nvidia-ml-py3>=7.352.0",
    "ray>=1.6.0",
    "dask>=2021.9.0",
    "distributed>=2021.9.0",
]
web = [
    "jinja2>=3.0.0",
    "starlette>=0.14.0",
    "python-multipart>=0.0.5",
    "itsdangerous>=2.0.0",
]
visualization = [
    "plotly>=5.0.0",
    "bokeh>=2.4.0",
    "altair>=4.1.0",
    "folium>=0.12.0",
]

[project.scripts]
nanolandscape = "nanolandscape.cli.main:cli"
nanolandscape-server = "nanolandscape.cli.main:serve"
nanolandscape-simulate = "nanolandscape.cli.main:simulate"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
nanolandscape = ["*.md", "*.txt", "*.json"]